--- a/FootLand/templates/search_results.html
+++ b/FootLand/templates/search_results.html
@@ -86,7 +86,7 @@
             margin-top: 10px;
         }
 
-        .add-to-cart-btn, .buy-now-btn {
+        .wishlist-btn {
             display: inline-block;
             margin: 5px 0;
             padding: 8px 15px;
@@ -94,7 +94,7 @@
             font-weight: bold;
             text-transform: uppercase;
             color: #fff;
-            background-color: #007bff;
+            background-color: #ff4081;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -102,16 +102,8 @@
             width: 90%;
         }
 
-        .buy-now-btn {
-            background-color: #28a745;
-        }
-
-        .add-to-cart-btn:hover {
-            background-color: #0056b3;
-        }
-
-        .buy-now-btn:hover {
-            background-color: #218838;
+        .wishlist-btn:hover {
+            background-color: #e0356f;
         }
 
         /* No results message */
@@ -166,10 +158,12 @@
                             <div class="product-info">
                                 <h2>{{ product.name }}</h2>
                                 <p>${{ product.price }}</p>
-                                <div class="product-actions">
-                                    <button class="add-to-cart-btn">Add to Cart</button>
-                                    <button class="buy-now-btn">Buy Now</button>
-                                </div>
+                                <form method="POST" action="{% url 'add_to_wishlist' %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="product_id" value="{{ product.id }}">
+                                    <button class="wishlist-btn" type="submit">Add to Wishlist</button>
+                                </form>
+                                
                             </div>
                         </a>
                     </li>
