change in kids product and mens product

--- a/FootLand/templates/add_product.html
+++ b/FootLand/templates/add_product.html
@@ -92,10 +92,10 @@
         {{ form.name }}
         <small class="error">{{ form.name.errors }}</small>
     
-        <!-- Material -->
-        <label for="material">Material:</label>
-        {{ form.material }}
-        <small class="error">{{ form.material.errors }}</small>
+        <!-- Description -->
+        <label for="material">Description:</label>
+        {{ form.description }}
+        <small class="error">{{ form.description.errors }}</small>
 
          <!-- type -->
          <label for="type">Type:</label>
@@ -107,10 +107,10 @@
         {{ form.brand }}
         <small class="error">{{ form.brand.errors }}</small>
 
-        <!-- type -->
-        <label for="type">Type:</label>
-        {{ form.type }}
-        <small class="error">{{ form.type.errors }}</small>
+        <!-- Material -->
+        <label for="type">Material:</label>
+        {{ form.material }}
+        <small class="error">{{ form.material.errors }}</small>
     
     
         <!-- Price -->
