--- a/FootLand/templates/mens_products.html
+++ b/FootLand/templates/mens_products.html
@@ -297,7 +297,7 @@
                         <label><input type="checkbox" name="color" value="Green"> Green<br></label>
                             <label><input type="checkbox" name="color" value="Pink"> Pink<br></label>
                                 <label><input type="checkbox" name="color" value="Black"> Black<br></label>
-                                    <labelr<input type="checkbox" name="color" value="White"> White<br></label>
+                                    <label><input type="checkbox" name="color" value="White"> White<br></label>
             </div>
 
             <div class="filter-section">
