send email to the new user and add addto cart to the wishlist

--- a/FootLand/templates/login.html
+++ b/FootLand/templates/login.html
@@ -32,7 +32,7 @@
                     <span class="validation-message">Password must contain numbers and special characters.</span>
                     <a href="{% url 'forgot_password'%}" class="forgot-password">Forgot password?</a>
                 </div>
-                <button type="submit" class="login-button">Login</button>
+                <button type="submit" class="login-button" id="login">Login</button>
                 <div class="divider">
                     <hr class="line"><span>or</span><hr class="line">
                 </div>
