--- a/FootLand/templates/mens_products.html
+++ b/FootLand/templates/mens_products.html
@@ -227,6 +227,32 @@
             margin-left: 15px; /* Space between icons */
             cursor: pointer;
         }
+        
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: #fdfafa;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            color: #333;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #fdf8f8;
+        }  
     </style>
 </head>
 <body>
@@ -245,6 +271,16 @@
                         <img src="{% static 'images/search.png' %}" width="20px" height="20px">
                     </button>
                 </form>
+            </li>
+            <li class="dropdown">
+                <a href="#"><img src="{% static 'images/user.png' %}" width="30px" height="30px"></a>
+                <div class="dropdown-content">
+                    {% if request.session.user_id %}
+                    <a href="{% url 'add_profile' %}">Welcome, {{ request.session.username }}</a>                                {% else %}
+                        <a href="{% url 'login' %}">Welcome</a>
+                    {% endif %}
+                    <a href="{% url 'logout' %}">Logout</a>
+                </div>
             </li>
             <li>
                 <a href="{% url 'wishlist' %}">
@@ -331,6 +367,13 @@
                 <p>Price: Rs. {{ product.price }}</p>
                 <p>Brand: {{ product.brand }}</p>
             </a>
+            {% if product.stock_quantity == 0 %}
+            <p style="color: red;">Out of Stock</p>
+        {% elif product.stock_quantity <= 5 %}
+            <p style="color: orange;">Only {{ product.stock_quantity }} left</p>
+        {% else %}
+            <p style="color: green;">In Stock</p>
+        {% endif %}
             <form action="{% url 'add_to_wishlist' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="product_id" value="{{ product.id }}">
