--- a/FootLand/templates/user_dashboard.html
+++ b/FootLand/templates/user_dashboard.html
@@ -124,7 +124,7 @@ nav {
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="{% url 'user_dashboard' %}">Home</a></li>
                         
                         <li><a href="{% url 'womens_products' %}">Womens</a></li>
                         <li><a href="{% url 'mens_products' %}">Mens</a></li>
